# tantivy-machine

./: Cargo.toml
src/: main.rs
